--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
   background-image: url('https://images-na.ssl-images-amazon.com/images/I/51uPRPFLjjL._SX425_.jpg');
   background-size: cover;
+  background-repeat: no-repeat;
 }
