--- a/Photos/style.css
+++ b/Photos/style.css
@@ -30,6 +30,6 @@ button:hover{
 }
 .foot{
   width: 100%;
-  height: 50px;
-  background-color: black
+  height: 100px;
+  background-color: 000000;
 }
