--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ h1{
   color: black;
   font-size: 60px;
 }
-button{
+.button{
   text-align: center;
   height: 50;
   width: 200;
@@ -16,7 +16,7 @@ button{
   border-color: black;
   transition: .3s;
 }
-button:hover{
+.button:hover{
   background-color: white;
   color: black;
 }
