--- a/style.css
+++ b/style.css
@@ -29,12 +29,10 @@ button:hover{
   width: 50%;
 }
 
-footer a {
-  text-decoration: none;
-  color: #fff;
-  padding: 100px 100%;
+footer {
+  width: 100%;
+  height: 100px;
   background-color: #000000;
-  text-align: center;
 }
 
 
