--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@ button:hover{
 footer {
   width: 100%;
   height: 100px;
-  background-color: #000000;
+  background-color: #404040;
+  color: #cccccc;
 }
 
 
