--- a/style.css
+++ b/style.css
@@ -32,8 +32,8 @@ button:hover{
 footer {
   width: 100%;
   height: 200px;
-  background-color: #333333;
-  color: #cccccc;
+  background-color: #262626;
+  color: #999999;
   bottom: 0;
 }
 
