--- a/style.css
+++ b/style.css
@@ -35,6 +35,8 @@ footer {
   background-color: #262626;
   color: #999999;
   bottom: 0;
+  padding-right: 0px;
+  padding-left: 0px;
 }
 
 footer a:hover {
