--- a/style.css
+++ b/style.css
@@ -2,14 +2,25 @@ body {
   font-family: sans-serif;
   text-align: center;
 }
-h1, h1 a {
+h1 {
   color: black;
   font-size: 60px;
 }
 
+h1.maina {
+  text-decoration: none;
+  color: blue;
+}
+h1.maina:hover {
+  text-decoration: underline;
+}
+
 .maina {
   text-decoration: none;
-  color: #000000;
+  color: blue;
+}
+.maina:hover {
+  text-decoration: underline;
 }
 
 button {
