--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ h1 {
   font-size: 60px;
 }
 
+p.maina {
+  text-decoration: none;
+  color: blue;
+}
+
 .maina {
   text-decoration: none;
   color: blue;
