--- a/irasTestPage/style.css
+++ b/irasTestPage/style.css
@@ -25,3 +25,27 @@ body {
     height:50px;
     
 }
+
+  footer {
+  width: 100%;
+  height: 200px;
+  background-color: #262626;
+  color: #999999;
+  bottom: -100000;
+  padding: 0px;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+
+.footbr {
+  line-height: 50%;
+}
+
+footer a {
+  text-decoration: none;
+  color: #ffffff;
+  padding-right: 5px;
+  padding-left: 5px;
+}
