--- a/Photos/style.css
+++ b/Photos/style.css
@@ -28,8 +28,29 @@ button:hover{
   height: 23%;
   width: 50%;
 }
-.foot{
+
+<!-- footer start -->
+footer {
   width: 100%;
-  height: 100px;
-  background-color: 000000;
+  height: 200px;
+  background-color: #262626;
+  color: #999999;
+  bottom: -100000;
+  padding: 0px;
 }
+
+footer a:hover {
+  text-decoration: underline;
+}
+
+.footbr {
+  line-height: 50%;
+}
+
+footer a {
+  text-decoration: none;
+  color: #ffffff;
+  padding-right: 5px;
+  padding-left: 5px;
+}
+<!-- footer end -->
