--- a/style.css
+++ b/style.css
@@ -66,3 +66,14 @@ footer a {
   color: #ffffff;
   cursor: pointer;
 }
+
+.facebook_button {
+  background-color: #000000;
+  border-style: none;
+  color: #ffffff;
+  width: 300px;
+  height: 50px;
+  text-align: center;
+  font-size: 18px;
+  cursor: pointer;
+}
