--- a/Photos/style.css
+++ b/Photos/style.css
@@ -2,27 +2,7 @@ body{
   font-family: sans-serif;
   text-align: center;
 }
-h1{
-  color: black;
-  font-size: 60px;
-}
-button{
-  text-align: center;
-  height: 50;
-  width: 200;
-  background-color: black;
-  color: white;
-  font-size: 14.5px;
-  border-color: black;
-  transition: .3s;
-}
-button:hover{
-  background-color: white;
-  color: black;
-}
-.Photos{
-  color: black;
-  font-size: 60px;
+
 }
 .farm{
   height: 23%;
@@ -32,7 +12,37 @@ button:hover{
   cursor: pointer;
 }
 
-<!-- footer start -->
+.navbar {
+  overflow: hidden;
+  background-color: black;
+}
+.navbar a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 20px;
+  text-decoration: none;
+  transition: .3s;
+}
+.navbar a:hover {
+  background-color: #666666;
+}
+
+
+img {
+  text-align: center;
+}
+
+.Photos{
+  color: black;
+  font-size: 60px;
+}
+.farm{
+  height: 23%;
+  width: 50%;
+}
+
 footer {
   width: 100%;
   height: 200px;
@@ -56,4 +66,21 @@ footer a {
   padding-right: 5px;
   padding-left: 5px;
 }
-<!-- footer end -->
+
+
+.facebook_button {
+  background-color: #262626;
+  border-style: none;
+  color: #ffffff;
+  width: 300px;
+  height: 50px;
+  text-align: center;
+  font-size: 18px;
+  cursor: pointer;
+  transition: .3s;
+}
+
+.facebook_button:hover {
+  background-color: #ffffff;
+  color: #262626;
+}
