--- a/Photos/style.css
+++ b/Photos/style.css
@@ -71,6 +71,7 @@ footer a {
 .facebook_button {
   background-color: #262626;
   border-style: none;
+  border-radius: 30px;
   color: #ffffff;
   width: 300px;
   height: 50px;
