--- a/quiz/finish/style.css
+++ b/quiz/finish/style.css
@@ -1,1 +1,20 @@
+body {
+  background-color: white;
+  font-family: sans-serif;
+  margin-left: 20px;
 
+}
+
+input {
+  margin-left: 50px;
+}
+
+button {
+  background-color: black;
+  border-style: none;
+  color: white;
+  height: 50px;
+  width: 150px;
+  font-size: 24px;
+  text-align: center;
+}
