--- a/Omund/style.css
+++ b/Omund/style.css
@@ -1,40 +1,48 @@
 body {
-  font-family: sans-serif;
+  font-family: sans-serif;
 }
 
 .contact_form {
-  z-index: +1;
-  top: 20px;
-  text-align: left;
-  margin-left: 30px;
+  z-index: +1;
+  top: 20px;
+  text-align: left;
+  margin-left: 30px;
 }
 
 .form_div {
-  z-index: -1;
-  background-color: #000000;
-  opacity: .2;
-  border-radius: 10px;
-  height: 400px;
-  width: 500px;
-  position: absolute;
-  margin-left: 10px;
+  z-index: -1;
+  background-color: #000000;
+  opacity: .2;
+  border-radius: 10px;
+  height: 400px;
+  width: 500px;
+  position: absolute;
+  margin-left: 10px;
 }
 
 .submitB {
-  text-align: center;
-  border-decoration: none;
-  color: #000000;
-  background-color: #ffffff;
-  border-radius: 5px;
-  height: 30px;
-  width: 100px;
+  text-align: center;
+  border-decoration: none;
+  color: #000000;
+  background-color: #ffffff;
+  border-radius: 5px;
+  height: 30px;
+  width: 100px;
 }
 
 .submitB:hover {
-  background-color: #f7f7f7;
-  cursor: pointer;
+  background-color: #f7f7f7;
+  cursor: pointer;
 }
 
 .text_monitor {
-  z-index: +2;
+  z-index: +2;
+}
+
+.current_person {
+  font-weight: bold;
+}
+
+.omund_text {
+  font-weight: bold;
 }
